# hott-foundations-mathematics

./: .gitignore  .knowledge-base.md  .vercel-url  README.md
reviews/: coalgebraic-transcendentals-codex-review-round-1.md  coalgebraic-transcendentals-codex-review-round-2.md  coalgebraic-transcendentals-codex-review-round-3.md  coalgebraic-transcendentals-haskell-codex-review-round-1.md  coalgebraic-transcendentals-haskell-codex-review-round-2.md  coalgebraic-transcendentals-haskell-codex-review-round-3.md  coalgebraic-transcendentals-review-round-1.md  coalgebraic-transcendentals-review-round-2.md  coalgebraic-transcendentals-review-round-3.md  coalgebraic-transcendentals-review-round-4.md  cubical-hiit-cauchy-codex-review-round-1.md  cubical-hiit-cauchy-codex-review-round-2.md  cubical-hiit-cauchy-codex-review.md  cubical-hiit-cauchy-haskell-codex-review-round-1.md  cubical-hiit-cauchy-haskell-codex-review-round-2.md  cubical-hiit-cauchy-haskell-codex-review.md  cubical-hiit-cauchy-review-round-1.md  cubical-hiit-cauchy-review-round-2.md  directed-univalence-codex-review-round-1.md  directed-univalence-codex-review-round-2.md  directed-univalence-codex-review-round-3.md  directed-univalence-haskell-codex-review-round-1.md  directed-univalence-haskell-codex-review-round-2.md  directed-univalence-haskell-codex-review.md  directed-univalence-review-round-1.md  etcs-izf-folds-codex-review-round-1.md  etcs-izf-folds-codex-review-round-2.md  (+25 more)
src/coalgebraic-transcendentals/: Bisimulation.hs  Main.hs  Proofs.hs  Properties.hs  Streams.hs  coalgebraic-transcendentals.cabal
(+90 files in other folders)
